--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">
-                        Home</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Home</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
                     </a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="index.html#features3-3">Interior Painting</a><a class="dropdown-item text-black display-4" href="index.html">Exterior Painting</a><a class="dropdown-item text-black display-4" href="index.html">Commercial Painting</a><a class="dropdown-item text-black display-4" href="index.html">Multi Family Painting</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">
                         About Us</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="index.html">Meet The Team</a><a class="dropdown-item text-black display-4" href="page1.html">Residential Work</a><a class="dropdown-item text-black display-4" href="https://mobirise.co">Commercial Work</a><a class="dropdown-item text-black display-4" href="index.html#features3-3">Satisfaction Guaranteed</a><a class="dropdown-item text-black display-4" href="index.html">Painting Preparations</a><a class="dropdown-item text-black display-4" href="index.html">Partner Companies</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html#footer4-9" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section form4 cid-s56o7dDsrf" id="form4-b">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section form4 cid-s56o7dDsrf" id="form4-b">
 
     
 
@@ -94,7 +94,7 @@ do not hesitate to contact us, <br>we are here to help you achieve your goal.<br
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="coYuKXY8JxNVc4AL49/+flykm3zRKE9ZSwYTES+i0ctPLixJx2f1DV+wz+HrZBwSiUSt84dj/5/CFbjAzidD5pNUg69lx9oKC344D3z4Ilt56JZuOq8UrjRBgQJbChaf">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IDbbomnteLBTzWWDcKSzzLn8dcpVmwxN3bWEeSb6G0vZ3ip+AnpOJh5UdbIhP8gt4uF85X5XEq6mgzjUuw7RqWRegPr0SeOgxbzmFczDibngmwm1VsX/h9xvI4DxO19Q">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
