--- a/page1.html
+++ b/page1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section form4 cid-s56o7dDsrf" id="form4-b">
+<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section class="mbr-section form4 cid-s56o7dDsrf" id="form4-b">
 
     
 
@@ -94,7 +94,7 @@ do not hesitate to contact us, <br>we are here to help you achieve your goal.<br
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yZMkoBRUrlEyWb3kMcT6C0iH4jdkpFcwcSn3mRuHQDUbHTnqVexikiZha3P/jAn58jFSdzr4VsDHJCOPDs4b7RdDaK3Q4xMx2KgTCYynueZ8AkUcrD91oDOyUVxCUFAI">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rgtZKedLV2XL7hsoe715f/kPxO6fGuXj6L9LuzndRxiaeIK1DqYVzS5OxN3vONx9Gdqz0qRGsQQ9b1uZMfvLvjRM2mJXsgE9Hsf4fZFepn2tENCFQcPdXzCgpHvbNMXL">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
